<resources>
    <string name="app_name">BooksApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="AddToCollectionConfirmation">Added to your collection!</string>
    <string name="mysteriousLookingBook">A mysterious looking book.</string>
    <string name="other">Other</string>
    <string name="unknown">Unknown</string>
    <string name="anonymousAuthor">Anonymous Author</string>
    <string name="untitledBook">Untitled Book</string>
    <string name="free">FREE</string>
    <string name="take_it">Take it!</string>
    <string name="buy_it">Buy it!</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="REGISTER">REGISTER</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="noBooksFound">No Books :-(</string>
    <string name="profile">Profile</string>
    <string name="my_collection">My Collection</string>
    <string name="catalog">Catalog</string>
    <string name="communicate">Communicate</string>
    <string name="search_the_catalog">Search the catalog ...</string>
    <string name="search_your_collection">Search your collection ...</string>
    <string name="remove">Remove</string>
    <string name="removed_from_collection">Removed from collection!</string>
</resources>
