<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_folder_open_black_24dp"
            android:title="@string/my_collection"
            android:iconTint="@color/colorPrimaryDark"/>
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_books"
            android:title="@string/catalog"
            android:iconTint="@color/colorPrimaryDark"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
